--- a/index.html
+++ b/index.html
@@ -170,32 +170,32 @@
       background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 160 160' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='3'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='0.9'/%3E%3C/svg%3E");
     }
 
- @media (max-width: 768px) {
-  .center-block {
-    left: 6vw;
-    top: 10vh;
-  }
+    /* BOTONES 30% MÁS GRANDES EN CELULARES / IPAD */
+    @media (max-width: 768px) {
+      .center-block {
+        left: 6vw;
+        top: 10vh;
+      }
 
-  .name {
-    font-size: clamp(2rem, 6vw, 2.6rem);
-    letter-spacing: 0.26em;
-    flex-direction: column;
-    gap: 0.05em;
-  }
+      .name {
+        font-size: clamp(2rem, 6vw, 2.6rem);
+        letter-spacing: .26em;
+        flex-direction: column;
+        gap: .05em;
+      }
 
-  .subtitle {
-    font-size: 0.8rem;
-    letter-spacing: 0.20em;
-    margin-bottom: 1.1rem;
-  }
+      .subtitle {
+        font-size: .8rem;
+        letter-spacing: .20em;
+        margin-bottom: 1.1rem;
+      }
 
-  /* BOTONES 30% MÁS GRANDES EN CELULAR / IPAD */
-  .nav-button {
-    width: calc(177px * 1.3);        /* ✔️ 30% más anchos */
-    padding: calc(.20rem * 1.3) calc(.75rem * 1.3); /* ✔️ 30% más altos */
-    font-size: calc(.7rem * 1.3);    /* ✔️ texto 30% más grande */
-  }
-}
+      .nav-button {
+        width: calc(177px * 1.3);
+        padding: calc(.20rem * 1.3) calc(.75rem * 1.3);
+        font-size: calc(.7rem * 1.3);
+      }
+    }
 
     /* ICONO DE SONIDO — 7% MÁS PEQUEÑO */
     #speakerIcon {
@@ -214,7 +214,7 @@
       justify-content: center;
       cursor: pointer;
       backdrop-filter: blur(10px);
-      box-shadow: 0 0 25px rgba(0, 0, 0, 0.8);
+      box-shadow: 0 0 25px rgba(0,0,0,0.8);
       opacity: 0.85;
       transition: opacity 0.2s ease;
       z-index: 30;
@@ -223,32 +223,21 @@
       -webkit-user-drag: none;
     }
 
-    #speakerIcon:hover {
-      opacity: 0.85;
-    }
-
-    #speakerIcon:active {
-      transform: scale(0.95);
-    }
+    #speakerIcon:hover { opacity: .85; }
+    #speakerIcon:active { transform: scale(.95); }
 
     /* Tintineo con fade elegante */
     @keyframes attentionBlink {
-      0%   { opacity: 0.55; }
-      8%   { opacity: 1.0; }
-      16%  { opacity: 0.35; }
-      24%  { opacity: 1.0; }
-      32%  { opacity: 0.35; }
-      40%  { opacity: 1.0; }
-      100% { opacity: 0.55; }
+      0% { opacity: .55; }
+      8% { opacity: 1; }
+      16% { opacity: .35; }
+      24% { opacity: 1; }
+      32% { opacity: .35; }
+      40% { opacity: 1; }
+      100% { opacity: .55; }
     }
-
-    #speakerIcon.muted {
-      animation: attentionBlink 7s ease-in-out infinite;
-    }
-
-    #speakerIcon.active {
-      animation: none;
-    }
+    #speakerIcon.muted { animation: attentionBlink 7s ease-in-out infinite; }
+    #speakerIcon.active { animation: none; }
 
     #speakerIcon img {
       width: 70%;
@@ -258,62 +247,56 @@
       animation: huePulse 5.8s ease-in-out infinite alternate,
                  floatY 7.4s ease-in-out infinite;
       pointer-events: none;
-      user-select: none;
       -webkit-user-drag: none;
     }
 
     #speakerIcon.active img {
       animation-duration: 4.8s, 6.2s;
     }
-
     #speakerIcon.muted img {
       animation-duration: 7.5s, 8.5s;
       opacity: 0.9;
     }
 
     @keyframes huePulse {
-      0% { filter: hue-rotate(0deg) saturate(1.0) drop-shadow(0 0 5px rgba(0,0,0,0.7)); }
-      50% { filter: hue-rotate(12deg) saturate(1.25) drop-shadow(0 0 7px rgba(0,0,0,0.9)); }
-      100% { filter: hue-rotate(-10deg) saturate(1.1) drop-shadow(0 0 5px rgba(0,0,0,0.7)); }
+      0% { filter: hue-rotate(0deg) saturate(1) drop-shadow(0 0 5px rgba(0,0,0,.7)); }
+      50% { filter: hue-rotate(12deg) saturate(1.25) drop-shadow(0 0 7px rgba(0,0,0,.9)); }
+      100% { filter: hue-rotate(-10deg) saturate(1.1) drop-shadow(0 0 5px rgba(0,0,0,.7)); }
     }
 
     @keyframes floatY {
-      0%   { transform: translateY(0); }
-      50%  { transform: translateY(-3px); }
+      0% { transform: translateY(0); }
+      50% { transform: translateY(-3px); }
       100% { transform: translateY(0); }
     }
 
     .ring {
       position: absolute;
       inset: -28%;
+      pointer-events: none;
       display: flex;
       align-items: center;
       justify-content: center;
-      pointer-events: none;
     }
 
-    .ring svg {
-      width: 100%;
-      height: 100%;
-    }
+    .ring svg { width: 100%; height: 100%; }
 
     #ringCircle {
       fill: none;
       stroke-width: 3;
-      opacity: 0.9;
       stroke-linecap: round;
+      opacity: .9;
       transform-origin: 50% 50%;
       transform: rotate(-90deg);
-      stroke: rgba(135, 206, 250, 0.7);
-      transition: stroke 0.3s ease;
+      stroke: rgba(135,206,250,.7);
     }
 
     @keyframes ringColorShift {
-      0%   { stroke: rgba(135, 206, 250, 0.20); }
-      25%  { stroke: rgba(135, 206, 250, 0.85); }
-      50%  { stroke: rgba(173, 216, 230, 0.75); }
-      75%  { stroke: rgba(144, 238, 144, 0.65); }
-      100% { stroke: rgba(135, 206, 250, 0.20); }
+      0% { stroke: rgba(135,206,250,.20); }
+      25% { stroke: rgba(135,206,250,.85); }
+      50% { stroke: rgba(173,216,230,.75); }
+      75% { stroke: rgba(144,238,144,.65); }
+      100% { stroke: rgba(135,206,250,.20); }
     }
 
     #speakerIcon.muted #ringCircle,
@@ -321,22 +304,22 @@
       animation: ringColorShift 12s ease-in-out infinite;
     }
 
-/* NIEBLA INFERIOR AZUL OSCURO, COORDINADA CON EL FONDO */
-.bottom-fog {
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  height: 8vh;
-  pointer-events: none;
-  z-index: 20;
-  background: linear-gradient(
-    to top,
-    rgba(3, 18, 26, 1) 0%,      /* azul muy oscuro, como el fondo del mar */
-    rgba(3, 18, 26, 1) 37.5%,   /* mantiene el color hasta ~8% de la pantalla */
-    rgba(3, 18, 26, 0) 100%     /* se desvanece a transparente hacia arriba */
-  );
-}
+    /* NIEBLA INFERIOR AZUL PROFUNDO */
+    .bottom-fog {
+      position: fixed;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      height: 8vh;
+      pointer-events: none;
+      z-index: 20;
+      background: linear-gradient(
+        to top,
+        rgba(3,18,40,1) 0%,
+        rgba(3,18,40,1) 37%,
+        rgba(3,18,40,0) 100%
+      );
+    }
 
     /* ANIMACIÓN ESCALONADA TÍTULO / SUBTÍTULO / BOTONES */
     @keyframes fadeDown {
@@ -361,27 +344,22 @@
       animation: fadeDown 0.65s ease-out forwards;
       animation-delay: 0.15s;
     }
-
     .sea-container.visible .center-block .subtitle {
       animation: fadeDown 0.65s ease-out forwards;
       animation-delay: 0.30s;
     }
-
     .sea-container.visible .center-block .nav-button:nth-child(1) {
       animation: fadeDown 0.55s ease-out forwards;
       animation-delay: 0.48s;
     }
-
     .sea-container.visible .center-block .nav-button:nth-child(2) {
       animation: fadeDown 0.55s ease-out forwards;
       animation-delay: 0.60s;
     }
-
     .sea-container.visible .center-block .nav-button:nth-child(3) {
       animation: fadeDown 0.55s ease-out forwards;
       animation-delay: 0.72s;
     }
-
     .sea-container.visible .center-block .nav-button:nth-child(4) {
       animation: fadeDown 0.55s ease-out forwards;
       animation-delay: 0.84s;
@@ -456,7 +434,7 @@
       }
     }
 
-    /* helper: elegir PNG de alga sin repetir con los dos anteriores */
+    /* helper: elegir PNG sin formar racimos del mismo archivo */
     function pickAlgaSrcNoCluster(prev1, prev2) {
       let candidates = algaeSources.filter(s => s !== prev1 && s !== prev2);
       if (!candidates.length) {
@@ -478,7 +456,7 @@
       loadFG();
     }
 
-    /* FONDO (ALGAS DESENFOCADAS) */
+    /* FONDO (ALGAS DESENFOCADAS, SIN CORTARSE EN X) */
     function loadBG() {
       const baseCount = Math.floor(random(10,18));
       const factor = isPortrait() ? 0.5 : 1;
@@ -496,7 +474,6 @@
 
         const src = pickAlgaSrcNoCluster(prev1, prev2);
         img.src = src;
-
         prev2 = prev1;
         prev1 = src;
 
@@ -518,25 +495,30 @@
       const totalHeight = vh;
       const topOffset   = 0;
 
-      let currentX = random(vw * 0.05, vw * 0.10);
+      const marginLeft  = vw * 0.03;
+      const marginRight = vw * 0.03;
 
-      bgImages.forEach(img => {
+      const n = bgImages.length;
+      const segments = n + 1;
+      const segmentWidth = vw / segments;
+
+      bgImages.forEach((img, index) => {
         const ratio = img.naturalWidth / img.naturalHeight || 0.4;
         let width   = totalHeight * ratio;
         const maxWidth = vw * 0.35;
         if (width > maxWidth) width = maxWidth;
 
-        if (currentX + width > vw - vw * 0.05) {
-          img.remove();
-          return;
-        }
+        let center = (index + 1) * segmentWidth;
+        let left   = center - width / 2;
+
+        /* clamp para que nunca se corten en X */
+        if (left < marginLeft) left = marginLeft;
+        if (left + width > vw - marginRight) left = vw - marginRight - width;
 
         img.style.height = totalHeight + "px";
         img.style.width  = width + "px";
         img.style.top    = topOffset + "px";
-        img.style.left   = currentX + "px";
-
-        currentX += width + random(vw * 0.10, vw * 0.20);
+        img.style.left   = left + "px";
       });
 
       bgReady = true;
@@ -561,7 +543,6 @@
 
         const src = pickAlgaSrcNoCluster(prev1, prev2);
         img.src = src;
-
         prev2 = prev1;
         prev1 = src;
 
@@ -638,8 +619,8 @@
         p.style.left = random(0, 100) + "vw";
         p.style.top  = random(0, 100) + "vh";
 
-        p.style.setProperty("--driftX", random(3, 10) + "vw");
-        p.style.setProperty("--ampY",  random(-8, 8) + "px");
+        p.style.setProperty("--driftX",  random(3, 10) + "vw");
+        p.style.setProperty("--ampY",   random(-8, 8) + "px");  /* ← AQUÍ ESTABA EL PARÉNTESIS FALTANTE */
 
         p.style.animationDuration = random(14, 30) + "s";
         p.style.animationDelay    = random(-25, 0) + "s";
@@ -838,7 +819,8 @@
 
       noiseSource.start();
 
-      noiseGain.gain.linearRampToValueAtTime(0.024, audioCtx.currentTime+3); // 60% del valor original
+      /* ruido tipo televisor antiguo al ~60% del valor anterior */
+      noiseGain.gain.linearRampToValueAtTime(0.024, audioCtx.currentTime+3);
       scheduleNextNoiseMod();
     }
 
