--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
       transform-origin: 50% 100%;
       transform: translateZ(0);
     }
-    .alga-bg { z-index: 0; }
+    .alga-bg {
+      z-index: 0;
+      /* Para evitar que se “corten” dentro de su caja: */
+      object-fit: contain;
+    }
     .alga-fg {
       z-index: 1;
       filter: saturate(.95);
@@ -244,7 +248,7 @@
       height: 70%;
       object-fit: contain;
       filter: drop-shadow(0 0 5px rgba(0,0,0,0.8));
-      animation: huePulse 5.8s ease-in-out infinite alternate,
+      animation: huePulse 5.8sease-in-out infinite alternate,
                  floatY 7.4s ease-in-out infinite;
       pointer-events: none;
       -webkit-user-drag: none;
@@ -456,11 +460,17 @@
       loadFG();
     }
 
-    /* FONDO (ALGAS DESENFOCADAS, MENOS CANTIDAD Y SIN CORTARSE EN X) */
+    /* FONDO (ALGAS DESENFOCADAS, CANTIDAD SEGÚN ORIENTACIÓN, SIN CORTARSE EN X) */
     function loadBG() {
-      const baseCount = Math.floor(random(5,9));  // antes 10–18 → ahora muchas menos
-      const factor = isPortrait() ? 0.5 : 1;
-      const count = Math.max(3, Math.round(baseCount * factor));
+      let baseCount;
+      if (isPortrait()) {
+        // Pantalla vertical: 2–3 algas
+        baseCount = Math.floor(random(2, 3.99));
+      } else {
+        // Pantalla horizontal: 3–5 algas
+        baseCount = Math.floor(random(3, 5.99));
+      }
+      const count = Math.max(2, baseCount);
 
       let done = 0;
       bgImages = [];
@@ -511,7 +521,7 @@
         let center = (index + 1) * segmentWidth;
         let left   = center - width / 2;
 
-        /* clamp para que nunca se corten en X */
+        /* clamp para que nunca se salgan en X */
         if (left < marginLeft) left = marginLeft;
         if (left + width > vw - marginRight) left = vw - marginRight - width;
 
