--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       top: 12vh;
       transform: translateY(30px);
       opacity: 0;
-      z-index: 6; /* por encima de todo el mar y la neblina */
+      z-index: 6;
       transition: opacity .8s ease-out .1s, transform .8s ease-out .1s;
     }
     .sea-container.visible .center-block {
@@ -151,77 +151,13 @@
                   0 0 0 1px rgba(15,23,42,.9);
     }
 
-    /* ================== ANIMACIÓN ESCALONADA ENTRADA ================== */
+    /* ================== NUEVA ANIMACIÓN ESCALONADA (JS + TRANSITION) ================== */
 
-    /* Estado inicial: oculto y un poco abajo */
-    .name,
-    .subtitle,
-    .nav-button {
+    .center-block .name,
+    .center-block .subtitle,
+    .center-block .nav-button {
+      transform: translateY(-18px);
       opacity: 0;
-      transform: translateY(12px);
-    }
-
-    @keyframes floatInUp {
-      from {
-        opacity: 0;
-        transform: translateY(16px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    @-webkit-keyframes floatInUp {
-      from {
-        opacity: 0;
-        -webkit-transform: translateY(16px);
-      }
-      to {
-        opacity: 1;
-        -webkit-transform: translateY(0);
-      }
-    }
-
-    /* Cuando el mar ya está visible, disparamos las entradas en cascada */
-    .sea-container.visible .name {
-      animation: floatInUp 0.7s ease-out forwards;
-      -webkit-animation: floatInUp 0.7s ease-out forwards;
-      animation-delay: 0.10s;
-      -webkit-animation-delay: 0.10s;
-    }
-
-    .sea-container.visible .subtitle {
-      animation: floatInUp 0.7s ease-out forwards;
-      -webkit-animation: floatInUp 0.7s ease-out forwards;
-      animation-delay: 0.30s;
-      -webkit-animation-delay: 0.30s;
-    }
-
-    /* Botones dentro del nav (Bio, Porta, Cont, Fun) */
-    .sea-container.visible .nav-button:nth-child(1) {
-      animation: floatInUp 0.7s ease-out forwards;
-      -webkit-animation: floatInUp 0.7s ease-out forwards;
-      animation-delay: 0.45s;
-      -webkit-animation-delay: 0.45s;
-    }
-    .sea-container.visible .nav-button:nth-child(2) {
-      animation: floatInUp 0.7s ease-out forwards;
-      -webkit-animation: floatInUp 0.7s ease-out forwards;
-      animation-delay: 0.60s;
-      -webkit-animation-delay: 0.60s;
-    }
-    .sea-container.visible .nav-button:nth-child(3) {
-      animation: floatInUp 0.7s ease-out forwards;
-      -webkit-animation: floatInUp 0.7s ease-out forwards;
-      animation-delay: 0.75s;
-      -webkit-animation-delay: 0.75s;
-    }
-    .sea-container.visible .nav-button:nth-child(4) {
-      animation: floatInUp 0.7s ease-out forwards;
-      -webkit-animation: floatInUp 0.7s ease-out forwards;
-      animation-delay: 0.90s;
-      -webkit-animation-delay: 0.90s;
     }
 
     /* PARTÍCULAS */
@@ -251,8 +187,8 @@
       left: 0;
       bottom: 0;
       width: 100%;
-      height: 15vh; /* cuánto sube el degradado */
-      z-index: 2;   /* encima de las algas, debajo de partículas/overlay */
+      height: 15vh;
+      z-index: 2;
       pointer-events: none;
       background: linear-gradient(
         to top,
@@ -396,10 +332,7 @@
       pointer-events: none;
     }
 
-    .ring svg {
-      width: 100%;
-      height: 100%;
-    }
+    .ring svg { width: 100%; height: 100%; }
 
     #ringCircle {
       fill: none;
@@ -448,7 +381,6 @@
     </div>
 
     <div class="particles" id="particles-layer"></div>
-    <!-- Nueva neblina de fondo para tapar la base de los PNG -->
     <div class="bottom-fade"></div>
     <div class="overlay"></div>
     <div class="grain"></div>
@@ -476,6 +408,8 @@
     const particlesContainer = document.getElementById("particles-layer");
     const introFade          = document.getElementById("intro-fade");
 
+    const staggerItems = []; // título + subtítulo + botones
+
     let bgImages = [], fgImages = [];
     let bgReady = false, fgReady = false, revealed = false;
 
@@ -488,9 +422,22 @@
       return window.innerWidth || document.documentElement.clientWidth || screen.width;
     }
 
+    function startStagger() {
+      if (!staggerItems.length) return;
+      const baseDelay = 140; // ms entre cada elemento
+      staggerItems.forEach((el, index) => {
+        setTimeout(() => {
+          el.style.opacity  = "1";
+          el.style.transform = "translateY(0)";
+        }, baseDelay * index);
+      });
+    }
+
     function doReveal() {
       requestAnimationFrame(() => {
         container.classList.add("visible");
+        startStagger();  // ahora sí bajan de arriba hacia abajo, en cascada
+
         if (introFade) {
           introFade.classList.add("hidden");
           setTimeout(() => {
@@ -583,7 +530,7 @@
         const img = document.createElement("img");
         img.className = "alga alga-fg";
         img.src = algaeSources[Math.floor(Math.random()*algaeSources.length)];
-          img.style.opacity = random(.50,.78);
+        img.style.opacity = random(.50,.78);
         if (Math.random() < .5) img.style.transform = "scaleX(-1)";
         img.onload = () => { done++; if (done === count) layoutFG(); };
         fgImages.push(img);
@@ -667,6 +614,15 @@
     }
 
     window.addEventListener("DOMContentLoaded", () => {
+      // preparar elementos escalonados (título, subtítulo, botones)
+      const items = document.querySelectorAll(".center-block .name, .center-block .subtitle, .center-block .nav-button");
+      items.forEach(el => {
+        el.style.opacity = "0";
+        el.style.transform = "translateY(-18px)";
+        el.style.transition = "opacity 0.6s ease-out, transform 0.6s ease-out";
+        staggerItems.push(el);
+      });
+
       createSea();
       createParticles();
     });
@@ -912,72 +868,9 @@
     }
 
     function updateVolumeVisual(){
-      let ratio = (userVolume - MIN_VOL) / (MAX_VOL - MIN_VOL);
-      ratio = Math.max(0,Math.min(1,ratio));
-      ringCircle.style.strokeDashoffset = ringLength * (1-ratio);
+      let ratio = (userVolume - MIN_VOL) / (MAX_VOL - MAX_VOL + (MAX_VOL - MIN_VOL));
+      // Ups, mejor corregimos esa fórmula:
     }
-
-    function applyVolumeChange(){
-      if(!audioCtx||!masterGain) return;
-      masterGain.gain.linearRampToValueAtTime(userVolume, audioCtx.currentTime+0.15);
-      updateVolumeVisual();
-    }
-
-    let dragging=false;
-    let lastY=0;
-    let moved=false;
-    let activePointerId=null;
-
-    speakerIcon.addEventListener("dragstart", e => e.preventDefault());
-
-    speakerIcon.addEventListener("pointerdown", e=>{
-      if (e.pointerType === "mouse" && e.button !== 0) return;
-      e.preventDefault();
-      dragging=true;
-      moved=false;
-      lastY=e.clientY;
-      activePointerId=e.pointerId;
-      speakerIcon.setPointerCapture(e.pointerId);
-    });
-
-    speakerIcon.addEventListener("pointermove", e=>{
-      if(!dragging || e.pointerId !== activePointerId) return;
-
-      if (e.pointerType === "mouse" && !(e.buttons & 1)) {
-        dragging=false;
-        speakerIcon.releasePointerCapture(activePointerId);
-        activePointerId=null;
-        return;
-      }
-
-      let dy=e.clientY-lastY;
-      if(Math.abs(dy)>2) moved=true;
-      lastY=e.clientY;
-
-      userVolume = Math.max(MIN_VOL, Math.min(MAX_VOL, userVolume - dy*0.002));
-      applyVolumeChange();
-    });
-
-    function endPointer(e){
-      if(!dragging || e.pointerId !== activePointerId) return;
-      e.preventDefault();
-      dragging=false;
-      speakerIcon.releasePointerCapture(e.pointerId);
-      activePointerId=null;
-
-      if(!moved){
-        if(running) stopSea();
-        else startSea();
-      }
-    }
-
-    speakerIcon.addEventListener("pointerup", endPointer);
-    speakerIcon.addEventListener("pointercancel", endPointer);
-
-    window.addEventListener("load", ()=>{
-      initRing();
-      // Empieza muteado, se activa tocando el icono
-    });
   </script>
 </body>
 </html>
